fixed white space on the right

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@
 
 body {
   font-family: "Roboto Condensed", sans-serif;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
 }
 
 /* ******************* Navbar ******************* */
@@ -36,7 +41,6 @@ nav {
 
 /* -------- Menu Links -------- */
 nav a.nav-link {
-  /* font-weight: 500; */
   letter-spacing: 0.0375rem;
   cursor: pointer;
 }
@@ -66,7 +70,6 @@ nav ul li {
 
 .navbar-nav > li > a.active,
 .navbar-nav > li > a.active:focus {
-  /* might change color later */
   border-top: 0.1875rem solid var(--primary-blue);
 }
 
@@ -159,10 +162,11 @@ nav ul li {
 /* ******************* About Me ******************* */
 .about-me {
   color: var(--primary-white);
-  background-color: var(--secondary-black) !important;
+  background-color: var(--secondary-black);
   text-align: center;
   font-family: "Roboto Condensed", sans-serif;
-  margin-bottom: auto !important;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .profile-picture {
